@@ -594,6 +594,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = Rotate About
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = Rotate Selected Features.
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = Rotation Angle
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = The angle in degrees clockwise.
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = Cannot save to read only source for layer
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = Could not save.
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = Could not save layer.
