@@ -643,6 +643,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About=Rotar sobre
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features=Rotar  elementos seleccionad0s.
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle=\u00C1ngulo de Rotaci\u00F3n 
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise=El \u00E1ngulo en el sentido de las agujas del reloj
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer=No se puede guardar - La fuente es de s\u00F3lo-lectura.
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save=No se puede guardar
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer=No se puede guardar la capa
