@@ -593,6 +593,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = Kierr\u00E4 t\
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = Kierr\u00E4 valittuja kohteita
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = Kiertokulma
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = Kiertokulma asteina my\u00F6t\u00E4p\u00E4iv\u00E4\u00E4n
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = Ei voitu tallentaa\: vain lukuoikeudet
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = Ei voitu tallentaa
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = Tasoa ei voitu tallentaa
