@@ -594,6 +594,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = Tourner autour
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = Faire tourner les objets s\u00E9lectionn\u00E9s.
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = Angle de rotation
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = Angle en degr\u00E9s (sens horaire).
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = Enregistrer les modifications
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = Aucun jeu de donn\u00E9es modifi\u00E9 enregistrable
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = N'a pu sauvegarder cette couche qui est en lecture seule
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = N'a pu sauvegarder
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = La couche n'a pu \u00EAtre sauvegard\u00E9e
