@@ -500,6 +500,11 @@ org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Number-of-Points = Numbe
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Proportional-Transparency-Adjustment = Proportional Transparency Adjustment
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Source-Path = Source Path
 org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.Styles = Styles
+org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.xmin = T\:xMin
+org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.ymin = T\:yMin
+org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.xmax = T\:xMax
+org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.ymax = T\:yMax
+org.openjump.core.ui.plugin.layer.LayerPropertiesPlugIn.extent = T\:Extent
 org.openjump.core.ui.plugin.layer.pirolraster.ChangeRasterImageStyleDialog.Change-RasterImage-Style-Dialog-intro-text = With the controls of this dialog the raster image properties can be changed.
 org.openjump.core.ui.plugin.layer.pirolraster.CopySelectedRasterImageLayersPlugIn.Copy-Selected-Raster-Image-Layers = Copy Selected Raster Image Layers
 org.openjump.core.ui.plugin.layer.pirolraster.CutSelectedRasterImageLayersPlugIn.Cut-Selected-Raster-Image-Layers = Cut Selected Raster Image Layers
@@ -584,6 +589,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = Rotate About
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = Rotate Selected Features.
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = Rotation Angle
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = The angle in degrees clockwise.
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = Cannot save to read only source for layer
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = Could not save.
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = Could not save layer.
