@@ -592,6 +592,8 @@ org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-About = \u7ED5
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotate-Selected-Features = \u8F6E\u6D41\u9009\u5B9A\u7684\u7279\u70B9\u3002
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.Rotation-Angle = \u8F6C\u89D2
 org.openjump.core.ui.plugin.mousemenu.RotatePlugIn.The-angle-in-degrees-clockwise = \u5EA6\u987A\u65F6\u9488\u89D2\u5EA6\u3002
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn = T\:Save selected datasets
+org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.No-modified-writable-layer-selected = T\:No modified writable layer selected
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Cannot-save-to-read-only-source-for-layer = \u4E0D\u80FD\u4FDD\u5B58\u4E3A\u53EA\u8BFB\u6E90\u5C42
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save = \u65E0\u6CD5\u4FDD\u5B58\u3002
 org.openjump.core.ui.plugin.mousemenu.SaveDatasetsPlugIn.Could-not-save-layer = \u65E0\u6CD5\u50A8\u5B58\u5C42\u3002
